--- a/DSP/51633Project1/ProcessMusic.tex
+++ b/DSP/51633Project1/ProcessMusic.tex
@@ -12,6 +12,7 @@
 \captionsetup[figure]{labelformat=parens}
 \usepackage{graphicx}
 \usepackage{amsmath}
+\newcommand\numberthis{\addtocounter{equation}{1}\tag{\theequation}}
 \begin{document}
 \title{ProcessMusic: A DSP Application Framework}
 
@@ -158,26 +159,52 @@ the frequency domain as a series of log-spaced overlapping triangles. It can als
 \begin{figure}[h!]
 \centering
   \includegraphics[width=0.45\textwidth]{fig3.png}
-\caption{Visual representation of bark filter \cite{AudioBook}}
+\caption{Visual representation of a bark filter \cite{AudioBook}}
 \end{figure}
 
 Efficient implementation of the bark filter can be accomplished in the frequency domain, using matrix multiplication as below.
-\begin{equation}
-BC_{PxM} = FFT_{PxN}xBF_{NxM}; with FFT=FFT result matrix, BF=Frequency bark filter matrix, BC=Bark frequency coefficients, N=FFT length, P=(Data length/FFT length), M=Number of bark coefficients (typically 25)
-\end{equation}
+
+\begin{align}
+\begin{bmatrix}
+B_{1,1} & \cdots & B_{1,C} \\
+\vdots & \ddots & \vdots \\
+B_{M,1} & \cdots & B_{M,C} 
+\end{bmatrix} = \\ 
+\begin{bmatrix}
+T_{1,1} & \cdots & T_{1,N} \\
+\vdots & \ddots & \vdots \\
+T_{M,1} & \cdots & T_{M,N}
+\end{bmatrix} & 
+\begin{bmatrix}
+F_{1,1} & \cdots & F_{1,C} \\
+\vdots & \ddots & \vdots \\
+F_{N,C} & \cdots & F_{N,C}
+\end{bmatrix} \numberthis  
+\end{align}
+\textbf{\emph{T}} is the FFT results matrix 
+
+\textbf{\emph{F}} is a repeated Bark filter with \begin{math}F_{1,1}=F_{2,1}...=F_{N,1}\end{math}
+
+\textbf{\emph{B}} contains the resulting Bark frequency coefficients
+
+\begin{math}C\end{math}=Number of Bark filter coefficients
+
+\begin{math}N\end{math}=Number of FFT bins
+
+\begin{math}M\end{math}=\begin{math}\frac{datalen}{fftlen}\end{math}
 
 \section{Images}
 
 \section{Future Work}
 There are many improvements to be made to this toolkit. Near future improvements include an interface for streaming data, additional configuration
-parameters, more dynamic processing tools, the ability to splice static and dynamic processing stages, and the addition of a polyphase filter block
-to the static processing tools, using the FFT overlap-save method. Possible further extensions include making the data stream more dynamic, 
+parameters, more dynamic processing tools, the ability to splice static and dynamic processing stages, and the addition of a polyphase filter block utilizing FFT overlap-save to the static processing tools. Possible further extensions include making the data stream more dynamic, 
 lowering the memory usage of the application, and adding support for static processing tools implemented in CUDA.
 
 \section{Conclusion}
-Computers grow more and more complex, and great research often requires an extensive knowledge about computer operation and software development. Many researchers are unhappy focusing time and effort on the study of these tools, instead of their preferred
-application. By providing a well-structured framework for accomplishing common tasks, time spent researching can be focused exploring research 
-topics, instead of reimplementing existing ideas for each project.
+Computers grow more and more complex, and great research often requires extensive knowledge of computer operation and software development. Many
+ researchers are unhappy focusing time and effort on the study of these tools, instead of their preferred application. By providing a well-structured
+ framework for accomplishing common tasks, time spent researching can be focused exploring research topics, instead of reimplementing existing 
+ideas for each project.
 
 \begin{thebibliography}{1}
 \bibitem{DSPBook}
@@ -196,7 +223,7 @@ Kyle Kastner works at Southwest Research Institute, Division 16.
 \end{IEEEbiographynophoto}
 
 \begin{IEEEbiographynophoto}{Johanna Hansen}
-Johanna Hansen works at Southwest Research Institute, Division 16.
+Johanna Hansen works at Southwest Research Institute, Division 10.
 \end{IEEEbiographynophoto}
 
 % You can push biographies down or up by placing
