--- a/DSP/51633Project1/QuDSP.tex
+++ b/DSP/51633Project1/QuDSP.tex
@@ -51,7 +51,7 @@ in the data pipeline. As a result, algorithm development and deployment tend to 
 First, the algorithm is developed in a high-level language such as MATLAB or Python, using tools for visualization 
 and basic debugging in order to verify the operations work as expected. Next, the same application is ported to a low-level compiled
 language, in order to meet the performance required for most DSP applications. During this translation, many new and
-unforseen bugs can occur, lengthening development time and increasing project complexity. 
+unforeseen bugs can occur, lengthening development time and increasing project complexity. 
 
 \subsection{Overview}
 By combining performant data processing code blocks and a high-level scripting interface into a unified toolkit, it 
@@ -69,14 +69,14 @@ such as testing, bug-fixing, and setup of development tools.
 Performance is a difficult topic. What works well on one set of hardware may work poorly or fail completely on another system. Design decisions
 made by other dataflow frameworks can also reduce performance, while gaining data safety and user friendliness. One of the key ideas behind the 
 performance pipeline is to minimize data copying, which can greatly degrade performance of a program. On some modern processors, it can also be 
-faster to keep a set of resentative data and re-apply the transforms on the other side of a data transfer, rather than going back to memory 
+faster to keep a set of representative data and re-apply the transforms on the other side of a data transfer, rather than going back to non-cache memory 
 (or worse, disk!). By choosing languages with a history of acceptance in the scientific community, minimizing redundant operations, and designing 
-with paralell operation in mind, intricate code can remain performant enough for large-scale use.
+with parallel operation in mind, intricate code can remain performant enough for large-scale use.
 
 \subsubsection{Visualization}
 The availability of visualization tools can maximize gains for time spent during the development process. Being able to make changes to an 
-algorithm and immediately view the results of these changes can allow an engineer to rapidly home in problem areas of a given implementation. 
-Visuals also provide an excellent way to communicate results and design decisions in an easily understandable way.
+algorithm and immediately view the results of these changes can allow an engineer to rapidly zero in problem areas of a given implementation. 
+Visuals also provide an excellent way to communicate results and design decisions in an understandable way.
 
 \subsubsection{Flexibility}
 Flexibility is the trademark of many great tools. By designing a tool with maximum flexibility, individuals are able to use existing 
@@ -86,7 +86,7 @@ stage, as too much flexibility often hurts performance, and vice-versa.
 \section{Design}
 Design of this framework involved the concept of four separate "stages" of processing: configuration, data acquisition, static processing, and 
 dynamic processing. The dynamic and static processing stages are designed to intertwine, but the current implementation occurs as a 
-linear sequence of events. A configurable option to continously repeat the dynamic section is also shown in Figure 1.
+linear sequence of events. A configurable option to continuously repeat the dynamic section is also shown in Figure 1.
 \begin{figure}[h!]
 \centering
   \includegraphics[width=0.45\textwidth]{fig1.png}
@@ -101,11 +101,11 @@ of the effort is in C++. Hopefully, applications will reuse the C++ codebase, wh
 The configuration, data acquisition, and static processing stages are all accomplished using C++. Configuration uses libconfig, which 
 has it's own syntax for configuration files. These configurations files are read in when a program begins in order to configure blocks and 
 components. Data acquisition currently has two options: WAV file input and mp3 encoded file input. Depending on the extension of the named file, 
-data is stripped using libmpg123 ifor mp3s, or libsndfile for WAV format. Eventually, the data acquisition stage will also include the ability to processes streams of data, as well as CSV and raw binary files. Once the initial timeseries data is obtained, it is loaded into a block which will travel through the entire processing chain, gaining new entries as the data is transformed end manipulated. 
+data is stripped using libmpg123 for mp3s, or libsndfile for WAV format. Eventually, the data acquisition stage will also include the ability to processes streams of data, as well as CSV and raw binary files. Once the initial timeseries data is obtained, it is loaded into a block which will travel through the entire processing chain, gaining new entries as the data is transformed end manipulated. 
 
 Next, static processing is applied to the data using compiled blocks of processing code. Currently, the static blocks available perform FFTs, 
 Cepstral Transforms, Bark Frequency Cepstral Coefficients, and DCTs. These blocks use libfftw3 and the Eigen template library to perform 
-fourier transforms and matrix operations. Once the static processing chain has completed, the data and it's tranform representations are 
+Fourier transforms and matrix operations. Once the static processing chain has completed, the data and it's transform representations are 
 loaded into a Python interpreter, which then exposes the computed arrays directly to a configured list of Python scripts to be executed in the dynamic
 stage.
 
@@ -115,7 +115,7 @@ plotting routines, and complex analysis are performed in this stage. Most of the
 and mathematical packages available for Python. There are also configurable options to run the dynamic stage repeatedly, which allows developers to change the Python scripts and immediately see the results of these changes, without having to redo the expensive data transform computations.
 
 \subsubsection{Diagram}
-The system specification shown in Figure 1 can now be represented with implemenation boundaries, as in Figure 2.
+The system specification shown in Figure 1 can now be represented with implementation boundaries, as in Figure 2.
 \begin{figure}[h!]
 \centering
   \includegraphics[width=0.45\textwidth]{fig2.png}
@@ -127,7 +127,7 @@ The system specification shown in Figure 1 can now be represented with implemena
 To understand the FFT, it is important to first describe the DFT, the mathematical equation on which the FFT algorithm is based.
 The basic DFT can be represented by Equation 1. \cite{DSPBook}
 \begin{equation}
-X_k = \sum_{n=0}^{N-1}x_ne^{\frac{-j2k\pi}{N}};k = 0,...,N-1
+X_k = \sum_{n=0}^{N-1}x_ne^{\frac{-j2k\pi n}{N}};k = 0,...,N-1
 \end{equation}
 
 The FFT is a mathematical transformation of the DFT which reduces the number of computations required to compute the result. 
@@ -147,7 +147,7 @@ often used for speech processing. \cite{DSPBook, AudioBook}
 
 \subsubsection{DCT}
 The DCT and the DFT are highly related to each other - in fact, the DCT can be considered a direct subset of the DFT. By removing the sine components
-of a DFT computation, the DCT is performed. There are many different fomulations for the DCT, represent in roman numerals I-VIII. The most widely
+of a DFT computation, the DCT is performed. There are many different formulations for the DCT, represented by roman numerals I-VIII. The most widely
 used equation for the DCT, DCT(II), is represented in Equation 3. \cite{DSPBook}
 \begin{equation}
 X_k = \sum_{n=0}^{N-1}x_n\cos(\frac{(n + \frac{1}{2})\pi k}{N});k = 0,...,N-1
@@ -233,7 +233,7 @@ A. Oppenheim, R. Schafer, and J. Buck, \emph{Discrete Time Signal Processing}, 2
 J. Smith, \emph{Spectral Audio Signal Processing}. W3K Publishing, 2011
 
 \bibitem{BarkPaper}
-J. Smith and J. Abel, \emph{Bark and ERB Bilinear Tranforms}, IEEE Transactions on Speech and Audio Processing, November, 1999.
+J. Smith and J. Abel, \emph{Bark and ERB Bilinear Transforms}, IEEE Transactions on Speech and Audio Processing, November, 1999.
 \end{thebibliography}
 
 % if you will not have a photo at all:
