Up through linear quantization complete. Still need a lot more work...

--- a/DSP/5163Project2/Quantization.tex
+++ b/DSP/5163Project2/Quantization.tex
@@ -89,8 +89,13 @@ dynamic range, quantization error can be fairly low. However, the linear quantiz
 alternatives which introduce less quantization error for the same system parameters $x_{max}$, $x_{min}$, and $B$.
 
 \subsection{Visualization}
+\begin{figure}[h!]
+\centering
+  \includegraphics[width=0.45\textwidth]{linear_4bit.png}
+\caption{Linear quantization}
+\end{figure}
+The image in Fig. 1 shows an example of linear quantization, applied to an audio file containing speech. 
 
-The image above shows an example of linear quantization, applied to an audio file containing speech. 
 \section{Non-linear Quantization}
 \subsection{Formulation}
 \subsection{Performance}
